--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -665,7 +665,7 @@ include kitty-custom.conf
 #: to/from always will only affect text subsequently received by
 #: kitty.
 
-copy_on_select yes
+copy_on_select clipboard
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
